<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:ignore="NamespaceTypo">

    <com.daimajia.swipe.SwipeLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        swipe:leftEdgeSwipeOffset="0dp"
        swipe:rightEdgeSwipeOffset="0dp">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@color/purple_200"
            android:weightSum="10"
            android:gravity="center"
            android:tag="abduRozik"
            android:id="@+id/hasbik">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:src="@drawable/ic_dontlike"
                android:id="@+id/vurgan"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="40dp"
                android:id="@+id/imageOne"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:layout_marginTop="40dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:id="@+id/textOne"/>

            <Button
                android:layout_width="75dp"
                android:layout_height="55dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="135dp"
                android:background="@drawable/price_btn"
                android:layout_toEndOf="@+id/imageOne"
                android:text="@string/price"
                android:textStyle="bold"
                android:textColor="@color/black"
                swipe:backgroundTint="@color/white"
                android:id="@+id/btnOne" />

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="247dp"
                android:layout_marginTop="140dp"
                android:background="@drawable/price_btn"
                swipe:backgroundTint="@color/pink"
                android:textStyle="bold"
                android:text="@string/minus"
                android:visibility="invisible"
                android:id="@+id/btnMinus"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="155dp"
                android:text="@string/cool"
                android:textColor="@color/black"
                android:visibility="invisible"
                android:id="@+id/textTwo"/>


            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="320dp"
                android:layout_marginTop="140dp"
                android:background="@drawable/price_btn"
                android:textStyle="bold"
                android:text="@string/plus"
                android:visibility="invisible"
                swipe:backgroundTint="@color/pink"
                android:id="@+id/btnPlus"/>

            <Button
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="10dp"
                android:text="@string/basket"
                android:textAllCaps="false"
                android:textStyle="bold"
                swipe:backgroundTint="@color/pink"
                android:visibility="visible"
                android:id="@+id/btnTwo"/>


        </RelativeLayout>
    </com.daimajia.swipe.SwipeLayout>
</LinearLayout>